# Stoianov_Digital_Projekt

./: README.html  README.md  requirements-scraper.txt  requirements.txt
_catalog/: issues.csv  magazines.csv
config/: zxpress.yaml
fcs-korp-endpoint (Referenz Endpoint von Querela)/: .dockerignore  Dockerfile  README.md  requirements.txt  setup.cfg
fcs-korp-endpoint (Referenz Endpoint von Querela)/src/korp_endpoint/: __main__.py  app.py  endpoint.py  korp.py  query_converter.py
index_dir/: _6.cfe  _6.si  _7.cfe  _7.si  _c.fdm  _c.fdx  _c.fnm  _c.kdd  _c.kdi  _c.kdm  _c.nvd  _c.nvm  _c.si  _c_Lucene912_0.psm  _c_Lucene912_0.tip  _c_Lucene912_0.tmd  _d.cfe  _d.si  segments_2
logs/health/: audit_problematic_magazines.csv  audit_summary.csv  summary.txt
logs/textsearch/: full_healthcheck.txt
logs/validation/: validate_200_20260602_004749.txt  validate_20_20260602_004745.txt  validate_3Bit_20260602_004742.txt  validate_47th_Byte_20260602_004741.txt  validate_ACNews_20260602_004751.txt  validate_Adventurer_20260602_004745.txt  validate_All_Paper_20260602_004749.txt  validate_Always_20260602_004744.txt  validate_Amazing_20260602_004746.txt  validate_Amiga_Info_20260602_004750.txt  validate_Amiga_News_20260602_004750.txt  validate_Amigoz_20260602_004744.txt  validate_Anecdotes_20260602_004746.txt  validate_Anigdot_20260602_004742.txt  validate_Anti-Top_20260602_004749.txt  validate_Antivel_20260602_004740.txt  validate_Aspect_20260602_004749.txt  validate_Avro_News_20260602_004745.txt  validate_BBSTOP_20260602_004751.txt  validate_Baltic_Press_20260602_004745.txt  (+270 more)
(+39723 files in other folders)
