[bdist_wheel]
universal = 1

[metadata]
name = fcs-korp-endpoint
version = 0.1
author = Erik Körner
author_email = "Erik Körner" <koerner@saw-leipzig.de>
description = "FCS Korp Endpoint"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
zip_safe = True
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.8
install_requires =
    fcs-simple-endpoint >=1.0.4
    requests >=2.28.2

[options.packages.find]
where = src

[options.package_data]
korp_endpoint =
    py.typed
    endpoint-description.xml
    sru-server-config.xml

[options.extras_require]
style =
    black >=23.1.0
    flake8 >=6.0.0
    isort >=5.11.4
    mypy >=0.991
    darglint >=1.8.1

[flake8]
max-line-length = 140
exclude = venv,dist
docstring-convention = google
per-file-ignores =
    setup.py:D
    __main__.py:E,F

[darglint]
docstring_style = google

; ignore lxml typing, if used with stub files,
; it needs a lot of work to quieten all warnings
[mypy]
exclude = (?x)(
    ^venv/
    | ^setup.py$
  )

[tool:isort]
profile = black
force_single_line = True
line_length = 120
skip = venv,dist
